--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,1 +1,28 @@
 <app-sidenav></app-sidenav>
+
+<div class="center fadeInDown" *ngIf="weatherCity && weatherLocation && different" >
+    <div class="row">
+        <div class="col-6">
+            <h2>Your city</h2>
+            <app-view [city]="weatherCity"></app-view>
+        </div>
+        <div class="col-6">
+            <h2>Your location</h2>
+            <app-view [city]="weatherLocation"></app-view>
+        </div>
+    </div>
+
+</div>
+
+<div class="center fadeInDown" *ngIf="weatherCity && weatherLocation && !different" >
+    <div class="row">
+        <div class="col-6">
+            <h2>Your location</h2>
+            <app-view [city]="weatherLocation"></app-view>
+        </div>
+    </div>     
+</div>
+
+<div class="center" *ngIf="!weatherCity || !weatherLocation">
+    <fa name="fas fa-spinner" animation="spin" class="icon"></fa>
+</div>
