--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -18,13 +18,13 @@
             </div>    
         </li>
         <li>
-            <a href="#">Look for other cities</a>
+            <a [routerLink]="['/cities']">Look for other cities</a>
             <div class="icon">
                     <fa name="fas fa-building" class="icon-i"></fa>
             </div>
         </li>
         <li>
-            <a href="#">Favourites</a>
+            <a [routerLink]="['/favourites']">Favourites</a>
             <div class="icon">
                     <fa name="far fa-star" class="icon-i"></fa>
             </div>
