--- a/src/app/location-style/view.component.html
+++ b/src/app/location-style/view.component.html
@@ -1,4 +1,4 @@
-<div class="view">
+<div class="view" [ngStyle]="{'background' : getStyle()}">
   <div class="city-weather-info">
       <div class="city">
           <h1>{{city.name}}</h1>
@@ -9,7 +9,7 @@
         <p>Realfeel: {{(city.main.temp).toFixed(0)}}°C</p>
       </div>    
   </div>
-  
+
   <div class="row icons">
     <div class="col-4 icon">
         <fa name="fas fa-thermometer-empty"></fa>
@@ -28,4 +28,6 @@
   <div class="row description">
     <p>{{city.weather[0].description.slice(0,1) | uppercase}}{{city.weather[0].description.slice(1,city.weather[0].description.length)}}</p>
   </div>
+
+  <button class="btn btn-danger btn-fav" (click)="addToFavourites(this.city)">Add to favourites</button>
 </div>
