--- a/src/app/sidenav/sidenav.component.css
+++ b/src/app/sidenav/sidenav.component.css
@@ -12,6 +12,7 @@
     transition: all .8s;
     background-color: #444;
     box-shadow: #444 1px 2px 20px;
+    z-index: 9999;
 }
 .nav:hover {
     cursor: pointer;
