--- a/src/app/favourites/favourites.component.css
+++ b/src/app/favourites/favourites.component.css
@@ -8,3 +8,12 @@
     width: 80%;
     margin: 0 auto 0 10%;
 }
+
+h1 {
+    color: black;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
