--- a/src/app/sidenav/sidenav.component.css
+++ b/src/app/sidenav/sidenav.component.css
@@ -23,7 +23,7 @@
 .options {
     position: absolute;
     top: 5px;
-    right: 12px;
+    right: 14px;
     color: white;
     font-size: 26px;
 
@@ -31,6 +31,7 @@
 
 .options:hover {
     animation: spin infinite 5s;
+    color: #9999FF;
 }
 
 @keyframes spin {
@@ -108,7 +109,7 @@ h2 {
 .logout {
     position: absolute;
     top: 5px;
-    left: 12px;
+    left: 14px;
     color: white;
     font-size: 26px;
     transition: all .4s;
