--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -11,19 +11,19 @@
     </div>
 
     <ul>
-        <li>
+        <li routerLinkActive="active">
             <a [routerLink]="['/welcome']">Homepage</a>
             <div class="icon">
                     <fa name="fas fa-home" class="icon-i"></fa>
             </div>    
         </li>
-        <li>
+        <li routerLinkActive="active">
             <a [routerLink]="['/cities']">Look for other cities</a>
             <div class="icon">
                     <fa name="fas fa-building" class="icon-i"></fa>
             </div>
         </li>
-        <li>
+        <li routerLinkActive="active">
             <a [routerLink]="['/favourites']">Favourites</a>
             <div class="icon">
                     <fa name="far fa-star" class="icon-i"></fa>
